tests/NormalTests/paczka1/small_fuzzy/33464487.err
Error in line 4: 2fNQxjLnE3Q A17 12,2
Error in line 12: LZvsD A17 97,2
